# lifeweeks

./: .gitignore  LICENSE  README.md  app.R  lifeweeks.Rproj  pyproject.toml
shiny/: app.R
site/: index.html
src/lifeweeks/: __init__.py  cli.py  plot.py  utils.py
