[project]
name = "lifeweeks"
version = "0.1.2"
description = "Creates a plot showing your life in weeks"
readme = "README.md"
authors = [
    { name = "Stephen Turner" }
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "matplotlib>=3.8",
]

[project.scripts]
lifeweeks = "lifeweeks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
