[project]
name = "lifeweeks"
version = "1.0.0"
description = "Creates a plot showing your life in weeks"
readme = "README.md"
authors = [
    { name = "Stephen Turner" }
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "matplotlib>=3.10",
]

[project.scripts]
lifeweeks = "lifeweeks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
